<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_view"
        android:layout_marginTop="@dimen/margin_view"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editName"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_view"
        android:background="@drawable/edit_text_white_background"
        android:hint="@string/enter_name_here"
        android:inputType="text"
        android:maxLength="15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_view"
        android:layout_marginTop="@dimen/margin_view"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTitle"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_view"
        android:background="@drawable/edit_text_white_background"
        android:hint="@string/enter_title_here"
        android:inputType="text"
        android:maxLength="15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_view"
        android:layout_marginTop="@dimen/margin_view"
        android:text="@string/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editDescription"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_view"
        android:background="@drawable/edit_text_white_background"
        android:hint="@string/enter_text_here"
        android:inputType="text"
        android:maxLength="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDescription" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/round_image"
        android:layout_height="@dimen/round_image"
        android:layout_margin="@dimen/margin_view"
        app:cardCornerRadius="@dimen/round_image"
        app:layout_constraintBottom_toBottomOf="@id/editDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTitle"
        app:layout_constraintTop_toTopOf="@id/editName">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/cloud" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/testButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mach_view_margin"
        android:background="@drawable/green_button_background"
        android:text="@string/test"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/launchButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mach_view_margin"
        android:background="@drawable/red_button_background"
        android:text="@string/launch"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testButton" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/iconViewPager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/arrowBack"
        app:layout_constraintEnd_toStartOf="@+id/arrowForward"
        app:layout_constraintTop_toBottomOf="@+id/launchButton"
        app:layout_constraintBottom_toTopOf="@id/cardViewPager"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrowBack"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toTopOf="@id/cardViewPager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/launchButton"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrowForward"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toTopOf="@id/cardViewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/launchButton"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/cardViewPager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iconViewPager"
        app:layout_constraintStart_toEndOf="@id/baselineArrowBack"
        app:layout_constraintEnd_toStartOf="@id/baselineArrowForward"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/baselineArrowBack"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:src="@drawable/ic_baseline_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrowBack"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/baselineArrowForward"
        android:layout_width="50sp"
        android:layout_height="100sp"
        android:src="@drawable/ic_baseline_arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrowForward"/>

</androidx.constraintlayout.widget.ConstraintLayout>