<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.postcard.ui.menu_fragment.MenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.menu_fragment.MenuFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_view"
            android:layout_marginTop="@dimen/margin_view"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editNameContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            errorMassage="@{viewModel.errorName}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editName"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_view"
                android:background="@drawable/edit_text_white_background"
                android:hint="@string/enter_name_here"
                android:maxLength="15"
                android:text="@={viewModel.model.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_view"
            android:layout_marginTop="@dimen/margin_view"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editNameContainer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTitleContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            errorMassage="@{viewModel.errorTitle}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTitle"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_view"
                android:background="@drawable/edit_text_white_background"
                android:hint="@string/enter_title_here"
                android:maxLength="15"
                android:text="@={viewModel.model.title}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_view"
            android:layout_marginTop="@dimen/margin_view"
            android:text="@string/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTitleContainer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editDescriptionContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            errorMassage="@{viewModel.errorDescription}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDescription"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_view"
                android:background="@drawable/edit_text_white_background"
                android:hint="@string/enter_text_here"
                android:maxLength="30"
                android:text="@={viewModel.model.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/round_image"
            android:layout_height="@dimen/round_image"
            android:layout_margin="@dimen/margin_view"
            app:cardCornerRadius="@dimen/round_image"
            app:layout_constraintBottom_toBottomOf="@id/editDescriptionContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editTitleContainer"
            app:layout_constraintTop_toTopOf="@id/editNameContainer">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/cloud" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/testButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="@drawable/green_button_background"
            android:onClick="@{() -> viewModel.launchPostcardFragment(true)}"
            android:text="@string/test"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editDescriptionContainer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/launchButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="@drawable/red_button_background"
            android:text="@string/launch"
            android:onClick="@{() -> viewModel.launchPostcardFragment(false)}"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/testButton" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/iconViewPager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/cardViewPager"
            app:layout_constraintEnd_toStartOf="@+id/arrowForward"
            app:layout_constraintStart_toEndOf="@id/arrowBack"
            app:layout_constraintTop_toBottomOf="@+id/launchButton" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrowBack"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toTopOf="@id/cardViewPager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launchButton" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrowForward"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintBottom_toTopOf="@id/cardViewPager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launchButton" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/cardViewPager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/baselineArrowForward"
            app:layout_constraintStart_toEndOf="@id/baselineArrowBack"
            app:layout_constraintTop_toBottomOf="@+id/iconViewPager" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/baselineArrowBack"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/ic_baseline_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arrowBack" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/baselineArrowForward"
            android:layout_width="50sp"
            android:layout_height="100sp"
            android:src="@drawable/ic_baseline_arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arrowForward" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>